Fixed overflow issue with hero zoom

--- a/src/sass/components/_hero.scss
+++ b/src/sass/components/_hero.scss
@@ -4,6 +4,7 @@
   flex-direction: column;
   position: sticky;
   top: -85px;
+  overflow: hidden;
 
   .hero-img {
     height: 100%;
